--- a/LoginFigma/LoginFigma/LoginScreen2/LoginScreen2ViewController.xib
+++ b/LoginFigma/LoginFigma/LoginScreen2/LoginScreen2ViewController.xib
@@ -28,36 +28,39 @@
                     <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tbg-rk-f0J" userLabel="ContentView">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="856"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="871.66666666666663"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-up-image" translatesAutoresizingMaskIntoConstraints="NO" id="D9n-sr-9XH">
-                                    <rect key="frame" x="20" y="28" width="353" height="563"/>
+                                    <rect key="frame" x="20" y="26" width="353" height="578"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="563" id="AQA-mN-fj7"/>
+                                        <constraint firstAttribute="height" constant="578" id="AQA-mN-fj7"/>
                                         <constraint firstAttribute="width" constant="353" id="j9A-iq-v1D"/>
                                     </constraints>
                                 </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-down-image" translatesAutoresizingMaskIntoConstraints="NO" id="VVR-GM-WJJ">
-                                    <rect key="frame" x="20" y="437" width="353" height="419"/>
+                                    <rect key="frame" x="20" y="452.66666666666674" width="353" height="419"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="419" id="Lj7-FN-JLo"/>
                                         <constraint firstAttribute="width" constant="353" id="hxW-nM-w2p"/>
                                     </constraints>
                                 </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_screen_2" translatesAutoresizingMaskIntoConstraints="NO" id="i3M-52-ZcN">
-                                    <rect key="frame" x="24.666666666666657" y="46" width="344.33333333333337" height="148.33333333333334"/>
+                                    <rect key="frame" x="24.666666666666657" y="46" width="344.33333333333337" height="157"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" secondItem="i3M-52-ZcN" secondAttribute="height" multiplier="365:157" id="hk2-hb-3BY"/>
+                                        <constraint firstAttribute="height" constant="157" id="LXG-cO-hvB"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mty-hZ-hto">
-                                    <rect key="frame" x="154" y="213.33333333333334" width="85.333333333333314" height="24.666666666666657"/>
+                                    <rect key="frame" x="154" y="222" width="85.333333333333314" height="24.666666666666657"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="24.670000000000002" id="jo2-WB-jJV"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="21"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fph-RY-Iy0">
-                                    <rect key="frame" x="74.666666666666686" y="238" width="244" height="66"/>
+                                    <rect key="frame" x="74.666666666666686" y="246.66666666666663" width="244" height="66"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="244" id="kQd-xQ-jZT"/>
                                         <constraint firstAttribute="height" constant="66" id="yEv-gA-D7d"/>
@@ -81,7 +84,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eY4-bp-cie" customClass="BaseTextField" customModule="LoginFigma" customModuleProvider="target">
-                                    <rect key="frame" x="51" y="307" width="291" height="47"/>
+                                    <rect key="frame" x="51" y="315.66666666666669" width="291" height="47"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="47" id="tDc-X0-s9a"/>
                                     </constraints>
@@ -101,7 +104,10 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D0U-Wq-qZA" customClass="BaseTextField" customModule="LoginFigma" customModuleProvider="target">
-                                    <rect key="frame" x="51" y="376" width="291" height="47"/>
+                                    <rect key="frame" x="51" y="384.66666666666669" width="291" height="47"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="47" id="63a-QC-Y1l"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     <userDefinedRuntimeAttributes>
@@ -118,7 +124,7 @@
                                     </connections>
                                 </textField>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K0R-Ha-HiP">
-                                    <rect key="frame" x="51" y="447" width="24.666666666666671" height="21"/>
+                                    <rect key="frame" x="51" y="455.66666666666669" width="24.666666666666671" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="Bci-OP-3gF"/>
                                         <constraint firstAttribute="width" constant="24.600000000000001" id="Vvy-kE-LKr"/>
@@ -130,13 +136,13 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iok-RW-D4X">
-                                    <rect key="frame" x="85.666666666666686" y="442" width="129" height="16.333333333333314"/>
+                                    <rect key="frame" x="85.666666666666686" y="450.66666666666669" width="129" height="16.333333333333314"/>
                                     <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="14"/>
                                     <color key="textColor" red="0.41960784309999999" green="0.36862745099999999" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="1lX-rv-ocp">
-                                    <rect key="frame" x="103.66666666666669" y="791" width="186" height="39"/>
+                                    <rect key="frame" x="103.66666666666669" y="806.66666666666663" width="186" height="39"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-brfacebook" translatesAutoresizingMaskIntoConstraints="NO" id="Z5A-sX-EbY">
                                             <rect key="frame" x="0.0" y="0.0" width="39" height="39"/>
@@ -176,13 +182,13 @@
                                     </constraints>
                                 </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or connect with" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8b-eh-FU1">
-                                    <rect key="frame" x="146" y="768.66666666666663" width="101" height="16.333333333333371"/>
+                                    <rect key="frame" x="146" y="784.33333333333337" width="101" height="16.333333333333371"/>
                                     <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="14"/>
                                     <color key="textColor" red="0.41960784309999999" green="0.36862745099999999" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDu-T8-thQ">
-                                    <rect key="frame" x="162" y="685.66666666666663" width="69" height="72"/>
+                                    <rect key="frame" x="162" y="701.33333333333337" width="69" height="72"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="69" id="f4O-iH-zTf"/>
                                         <constraint firstAttribute="height" constant="72" id="mgq-b2-5se"/>
@@ -196,15 +202,15 @@
                                     </buttonConfiguration>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login wit touch ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fo-mJ-n2O">
-                                    <rect key="frame" x="139.66666666666666" y="651.33333333333337" width="113.66666666666666" height="16.333333333333371"/>
+                                    <rect key="frame" x="139.66666666666666" y="667" width="113.66666666666666" height="16.333333333333371"/>
                                     <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="14"/>
                                     <color key="textColor" red="0.41960784309999999" green="0.36862745099999999" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="vnp-jF-Nfm">
-                                    <rect key="frame" x="54" y="585.33333333333337" width="286" height="45"/>
+                                    <rect key="frame" x="54" y="601" width="286" height="45"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vLv-mn-adV">
+                                        <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vLv-mn-adV">
                                             <rect key="frame" x="0.0" y="0.0" width="140.66666666666666" height="45"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="45" id="vVG-67-uPs"/>
@@ -253,7 +259,7 @@
                                     </subviews>
                                 </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forget password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJR-SC-M7G">
-                                    <rect key="frame" x="237.33333333333334" y="542" width="102.66666666666666" height="16.333333333333371"/>
+                                    <rect key="frame" x="237.33333333333334" y="557.66666666666663" width="102.66666666666666" height="16.333333333333371"/>
                                     <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="14"/>
                                     <color key="textColor" red="0.01176470588" green="0.52549019610000003" blue="0.81568627449999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -267,21 +273,20 @@
                                 <constraint firstItem="c8b-eh-FU1" firstAttribute="centerX" secondItem="tbg-rk-f0J" secondAttribute="centerX" id="8qh-JJ-fz4"/>
                                 <constraint firstAttribute="bottom" secondItem="VVR-GM-WJJ" secondAttribute="bottom" id="9DC-Zb-J5U"/>
                                 <constraint firstAttribute="trailing" secondItem="VVR-GM-WJJ" secondAttribute="trailing" constant="20" id="ADX-qD-A31"/>
+                                <constraint firstItem="KJR-SC-M7G" firstAttribute="top" secondItem="D0U-Wq-qZA" secondAttribute="bottom" constant="126" id="AOV-dd-aa4"/>
                                 <constraint firstAttribute="trailing" secondItem="D0U-Wq-qZA" secondAttribute="trailing" constant="51" id="Ay2-F6-QCv"/>
                                 <constraint firstItem="7fo-mJ-n2O" firstAttribute="top" secondItem="vnp-jF-Nfm" secondAttribute="bottom" constant="21" id="E6R-7d-sN0"/>
                                 <constraint firstItem="i3M-52-ZcN" firstAttribute="top" secondItem="tbg-rk-f0J" secondAttribute="top" constant="46" id="Hue-KK-K9u"/>
                                 <constraint firstItem="Fph-RY-Iy0" firstAttribute="centerX" secondItem="tbg-rk-f0J" secondAttribute="centerX" id="IVh-Ma-GfA"/>
                                 <constraint firstItem="K0R-Ha-HiP" firstAttribute="leading" secondItem="D0U-Wq-qZA" secondAttribute="leading" id="Ipj-bL-dUl"/>
                                 <constraint firstItem="c8b-eh-FU1" firstAttribute="top" secondItem="HDu-T8-thQ" secondAttribute="bottom" constant="11" id="M6H-QI-ldI"/>
-                                <constraint firstAttribute="height" constant="856" id="MXL-dc-Fvl"/>
                                 <constraint firstItem="D0U-Wq-qZA" firstAttribute="top" secondItem="eY4-bp-cie" secondAttribute="bottom" constant="22" id="OdY-Q4-n1Z"/>
                                 <constraint firstItem="HDu-T8-thQ" firstAttribute="top" secondItem="7fo-mJ-n2O" secondAttribute="bottom" constant="18" id="Odf-9u-J6a"/>
                                 <constraint firstItem="Mty-hZ-hto" firstAttribute="top" secondItem="i3M-52-ZcN" secondAttribute="bottom" constant="19" id="Ojt-1d-fWn"/>
-                                <constraint firstItem="D0U-Wq-qZA" firstAttribute="height" secondItem="eY4-bp-cie" secondAttribute="height" id="P2r-PQ-wJB"/>
                                 <constraint firstItem="D0U-Wq-qZA" firstAttribute="width" secondItem="eY4-bp-cie" secondAttribute="width" id="PDF-xn-1BA"/>
                                 <constraint firstItem="iok-RW-D4X" firstAttribute="leading" secondItem="K0R-Ha-HiP" secondAttribute="trailing" constant="10" id="SRI-Bj-e4n"/>
                                 <constraint firstItem="vnp-jF-Nfm" firstAttribute="top" secondItem="KJR-SC-M7G" secondAttribute="bottom" constant="27" id="TEu-p7-n9m"/>
-                                <constraint firstItem="D9n-sr-9XH" firstAttribute="top" secondItem="tbg-rk-f0J" secondAttribute="top" constant="28" id="V4Y-MU-n5s"/>
+                                <constraint firstItem="D9n-sr-9XH" firstAttribute="top" secondItem="tbg-rk-f0J" secondAttribute="top" constant="26" id="V4Y-MU-n5s"/>
                                 <constraint firstAttribute="trailing" secondItem="i3M-52-ZcN" secondAttribute="trailing" constant="24" id="Vgh-bz-w05"/>
                                 <constraint firstItem="i3M-52-ZcN" firstAttribute="leading" secondItem="tbg-rk-f0J" secondAttribute="leading" constant="24.5" id="aCa-6W-sQj"/>
                                 <constraint firstAttribute="trailing" secondItem="vnp-jF-Nfm" secondAttribute="trailing" constant="53" id="aNV-Wk-nuU"/>
