--- a/LoginFigma/LoginFigma/LoginScreen3/LoginScreen3ViewController.xib
+++ b/LoginFigma/LoginFigma/LoginScreen3/LoginScreen3ViewController.xib
@@ -31,7 +31,7 @@
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-right-image" translatesAutoresizingMaskIntoConstraints="NO" id="RXE-kZ-0Pb">
                     <rect key="frame" x="171.33333333333337" y="0.0" width="221.66666666666663" height="852"/>
                 </imageView>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AIO-e8-45D">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="AIO-e8-45D">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4br-gI-Qlu" userLabel="ContentView">
@@ -186,7 +186,7 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="A1M-Or-Ygb">
                                     <rect key="frame" x="50" y="495" width="290" height="45"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ig-y9-Vza">
+                                        <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ig-y9-Vza">
                                             <rect key="frame" x="0.0" y="0.0" width="140" height="45"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain">
