--- a/CloneGalaxyCinema/CloneGalaxyCinema/Cell/FooterScrollCell/FooterCell.xib
+++ b/CloneGalaxyCinema/CloneGalaxyCinema/Cell/FooterScrollCell/FooterCell.xib
@@ -17,14 +17,10 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="anh" translatesAutoresizingMaskIntoConstraints="NO" id="Xas-IS-dFp">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="320" id="Si5-Ry-Zmm"/>
-                            <constraint firstAttribute="height" constant="220" id="mgU-jv-uuT"/>
-                        </constraints>
+                        <rect key="frame" x="0.0" y="0.0" width="585" height="239"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZ4-DP-I6m">
-                        <rect key="frame" x="0.0" y="220" width="320" height="50"/>
+                        <rect key="frame" x="0.0" y="239" width="585" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="m56-6I-aqF"/>
                         </constraints>
@@ -38,9 +34,11 @@
             <constraints>
                 <constraint firstItem="hZ4-DP-I6m" firstAttribute="trailing" secondItem="Xas-IS-dFp" secondAttribute="trailing" id="5TY-Ay-KZh"/>
                 <constraint firstItem="Xas-IS-dFp" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="KAi-Nw-MMS"/>
+                <constraint firstAttribute="trailing" secondItem="Xas-IS-dFp" secondAttribute="trailing" id="KON-NX-CLB"/>
                 <constraint firstItem="Xas-IS-dFp" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="VeJ-r4-0nN"/>
                 <constraint firstItem="hZ4-DP-I6m" firstAttribute="leading" secondItem="Xas-IS-dFp" secondAttribute="leading" id="cAr-IV-Qlg"/>
                 <constraint firstItem="hZ4-DP-I6m" firstAttribute="top" secondItem="Xas-IS-dFp" secondAttribute="bottom" id="fTC-oD-kvw"/>
+                <constraint firstAttribute="bottom" secondItem="hZ4-DP-I6m" secondAttribute="bottom" id="x3s-Oa-Z37"/>
             </constraints>
             <size key="customSize" width="585" height="289"/>
             <connections>
