--- a/CloneGalaxyCinema/CloneGalaxyCinema/Cell/ScrollHeaderCell/ScrollHeaderCell.xib
+++ b/CloneGalaxyCinema/CloneGalaxyCinema/Cell/ScrollHeaderCell/ScrollHeaderCell.xib
@@ -9,25 +9,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ScrollCell" customModule="CloneGalaxyCinema" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ScrollHeaderCell" customModule="CloneGalaxyCinema" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="410" height="304"/>
-            <autoresizingMask key="autoresizingMask"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="410" height="304"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="anh" translatesAutoresizingMaskIntoConstraints="NO" id="G34-sq-Fq6">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="200" id="2uX-NA-IHS"/>
-                            <constraint firstAttribute="width" constant="320" id="F3O-GX-ZwZ"/>
-                        </constraints>
+                        <rect key="frame" x="0.0" y="0.0" width="410" height="304"/>
                     </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="G34-sq-Fq6" secondAttribute="trailing" id="CNf-So-CCb"/>
                 <constraint firstItem="G34-sq-Fq6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="IFp-1P-wUO"/>
+                <constraint firstAttribute="bottom" secondItem="G34-sq-Fq6" secondAttribute="bottom" id="fmN-6m-JV8"/>
                 <constraint firstItem="G34-sq-Fq6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="zp9-vo-Ht7"/>
             </constraints>
             <size key="customSize" width="410" height="304"/>
