--- a/CloneGalaxyCinema/CloneGalaxyCinema/Custom/ContentFooter.xib
+++ b/CloneGalaxyCinema/CloneGalaxyCinema/Custom/ContentFooter.xib
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G0n-b3-ceB">
-                    <rect key="frame" x="10" y="406" width="373" height="40"/>
+                    <rect key="frame" x="10" y="69" width="373" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Hqi-6f-F8I"/>
                     </constraints>
@@ -32,16 +32,16 @@
                         <color key="baseForegroundColor" red="0.93725490199999995" green="0.4941176471" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                     </buttonConfiguration>
                     <connections>
-                        <action selector="didTabSeeMore:" destination="-1" eventType="touchUpInside" id="Td3-0m-hjP"/>
+                        <action selector="didTabSeeMore:" destination="-1" eventType="touchUpInside" id="cbY-0p-tiN"/>
                     </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="G0n-b3-ceB" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="6qO-Y5-DUy"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="G0n-b3-ceB" secondAttribute="trailing" constant="10" id="A5M-2I-9Km"/>
                 <constraint firstItem="G0n-b3-ceB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="mZX-DA-0SS"/>
+                <constraint firstItem="G0n-b3-ceB" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="vD8-P0-RPj"/>
             </constraints>
             <point key="canvasLocation" x="140" y="21"/>
         </view>
