--- a/CloneGalaxyCinema/CloneGalaxyCinema/Cell/ContentCell/ContentCell.xib
+++ b/CloneGalaxyCinema/CloneGalaxyCinema/Cell/ContentCell/ContentCell.xib
@@ -4,53 +4,67 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ContentCell" customModule="CloneGalaxyCinema" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="352" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="249" height="335"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="352" height="300"/>
+                <rect key="frame" x="0.0" y="0.0" width="249" height="335"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blackpanther" translatesAutoresizingMaskIntoConstraints="NO" id="9lF-Ya-lTb">
-                        <rect key="frame" x="0.0" y="0.0" width="352" height="250"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kJF-Ps-nRT">
+                        <rect key="frame" x="0.0" y="0.0" width="249" height="335"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="blackpanther" translatesAutoresizingMaskIntoConstraints="NO" id="9lF-Ya-lTb">
+                                <rect key="frame" x="0.0" y="0.0" width="249" height="285"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jds-z1-8fg">
+                                <rect key="frame" x="0.0" y="285" width="249" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="RBi-9h-EOr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Thonburi-Bold" family="Thonburi" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="250" id="F12-Sk-GBg"/>
+                            <constraint firstAttribute="trailing" secondItem="jds-z1-8fg" secondAttribute="trailing" id="29l-co-P9a"/>
+                            <constraint firstAttribute="bottom" secondItem="jds-z1-8fg" secondAttribute="bottom" id="7dL-hE-X2k"/>
+                            <constraint firstItem="9lF-Ya-lTb" firstAttribute="leading" secondItem="kJF-Ps-nRT" secondAttribute="leading" id="eIR-lY-ujt"/>
+                            <constraint firstItem="jds-z1-8fg" firstAttribute="top" secondItem="9lF-Ya-lTb" secondAttribute="bottom" id="fWq-MH-Axp"/>
+                            <constraint firstAttribute="trailing" secondItem="9lF-Ya-lTb" secondAttribute="trailing" id="nUG-Qt-hAW"/>
+                            <constraint firstItem="jds-z1-8fg" firstAttribute="leading" secondItem="kJF-Ps-nRT" secondAttribute="leading" id="ov4-sU-Tjl"/>
+                            <constraint firstItem="9lF-Ya-lTb" firstAttribute="top" secondItem="kJF-Ps-nRT" secondAttribute="top" id="tX0-xn-587"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jds-z1-8fg">
-                        <rect key="frame" x="0.0" y="250" width="352" height="50"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="50" id="aD6-XN-tXn"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="jds-z1-8fg" firstAttribute="trailing" secondItem="9lF-Ya-lTb" secondAttribute="trailing" id="0sE-AM-bCH"/>
-                <constraint firstAttribute="trailing" secondItem="9lF-Ya-lTb" secondAttribute="trailing" id="9hk-Jk-86z"/>
-                <constraint firstItem="jds-z1-8fg" firstAttribute="leading" secondItem="9lF-Ya-lTb" secondAttribute="leading" id="S8R-9E-w8y"/>
-                <constraint firstItem="9lF-Ya-lTb" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="XiI-qb-4fg"/>
-                <constraint firstItem="jds-z1-8fg" firstAttribute="top" secondItem="9lF-Ya-lTb" secondAttribute="bottom" id="gU5-ZW-YMI"/>
-                <constraint firstItem="9lF-Ya-lTb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="seC-oh-FZM"/>
+                <constraint firstAttribute="bottom" secondItem="kJF-Ps-nRT" secondAttribute="bottom" id="2sg-92-E8p"/>
+                <constraint firstItem="kJF-Ps-nRT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="5i5-uz-E4C"/>
+                <constraint firstItem="kJF-Ps-nRT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="RgS-MO-GXm"/>
+                <constraint firstAttribute="trailing" secondItem="kJF-Ps-nRT" secondAttribute="trailing" id="c9x-51-D2d"/>
             </constraints>
-            <size key="customSize" width="352" height="300"/>
+            <size key="customSize" width="249" height="335"/>
             <connections>
                 <outlet property="contentImageView" destination="9lF-Ya-lTb" id="Sdn-IM-S6H"/>
                 <outlet property="contentNameLb" destination="jds-z1-8fg" id="vfH-4j-MoR"/>
             </connections>
-            <point key="canvasLocation" x="206.10687022900763" y="35.211267605633807"/>
+            <point key="canvasLocation" x="127.48091603053435" y="47.535211267605639"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="blackpanther" width="382" height="566"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
