--- a/CloneGalaxyCinema/CloneGalaxyCinema/Custom/ContentFooter.xib
+++ b/CloneGalaxyCinema/CloneGalaxyCinema/Custom/ContentFooter.xib
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G0n-b3-ceB">
-                    <rect key="frame" x="10" y="69" width="373" height="40"/>
+                    <rect key="frame" x="16" y="69" width="361" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Hqi-6f-F8I"/>
                     </constraints>
@@ -29,6 +29,7 @@
                         <backgroundConfiguration key="background" cornerRadius="5">
                             <color key="strokeColor" red="0.93725490199999995" green="0.4941176471" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                         </backgroundConfiguration>
+                        <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                         <color key="baseForegroundColor" red="0.93725490199999995" green="0.4941176471" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                     </buttonConfiguration>
                     <connections>
@@ -39,8 +40,8 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="G0n-b3-ceB" secondAttribute="trailing" constant="10" id="A5M-2I-9Km"/>
-                <constraint firstItem="G0n-b3-ceB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="mZX-DA-0SS"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="G0n-b3-ceB" secondAttribute="trailing" constant="16" id="A5M-2I-9Km"/>
+                <constraint firstItem="G0n-b3-ceB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="mZX-DA-0SS"/>
                 <constraint firstItem="G0n-b3-ceB" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="vD8-P0-RPj"/>
             </constraints>
             <point key="canvasLocation" x="140" y="21"/>
