--- a/CloneGalaxyCinema/CloneGalaxyCinema/Cell/ContentCell/ContentCell.xib
+++ b/CloneGalaxyCinema/CloneGalaxyCinema/Cell/ContentCell/ContentCell.xib
@@ -11,32 +11,88 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ContentCell" customModule="CloneGalaxyCinema" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="249" height="335"/>
+            <rect key="frame" x="0.0" y="0.0" width="227" height="335"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="249" height="335"/>
+                <rect key="frame" x="0.0" y="0.0" width="227" height="335"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kJF-Ps-nRT">
-                        <rect key="frame" x="0.0" y="0.0" width="249" height="335"/>
+                        <rect key="frame" x="0.0" y="0.0" width="227" height="335"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="blackpanther" translatesAutoresizingMaskIntoConstraints="NO" id="9lF-Ya-lTb">
-                                <rect key="frame" x="0.0" y="0.0" width="249" height="285"/>
+                                <rect key="frame" x="0.0" y="0.0" width="227" height="285"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jds-z1-8fg">
-                                <rect key="frame" x="0.0" y="285" width="249" height="50"/>
+                                <rect key="frame" x="0.0" y="285" width="227" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="RBi-9h-EOr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Thonburi-Bold" family="Thonburi" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1wm-RM-xvk">
+                                <rect key="frame" x="157" y="214" width="70" height="30"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Mam-ss-I2z">
+                                        <rect key="frame" x="16" y="7.666666666666667" width="14" height="13.666666666666664"/>
+                                        <color key="tintColor" red="1" green="0.66469128667091848" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="14" id="8oK-wt-WSb"/>
+                                            <constraint firstAttribute="width" constant="14" id="WGA-ya-7f9"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9.9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TgN-Da-XV4">
+                                        <rect key="frame" x="34" y="6.3333333333333428" width="21" height="17.333333333333332"/>
+                                        <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.49083502561051323" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="TgN-Da-XV4" firstAttribute="centerY" secondItem="1wm-RM-xvk" secondAttribute="centerY" id="2wk-ci-8va"/>
+                                    <constraint firstAttribute="width" constant="70" id="69X-Eq-nQd"/>
+                                    <constraint firstItem="Mam-ss-I2z" firstAttribute="leading" secondItem="1wm-RM-xvk" secondAttribute="leading" constant="16" id="Rve-ir-iaU"/>
+                                    <constraint firstAttribute="height" constant="30" id="fPZ-mD-QLt"/>
+                                    <constraint firstItem="TgN-Da-XV4" firstAttribute="leading" secondItem="Mam-ss-I2z" secondAttribute="trailing" constant="4" id="jpq-Ac-wII"/>
+                                    <constraint firstItem="Mam-ss-I2z" firstAttribute="centerY" secondItem="1wm-RM-xvk" secondAttribute="centerY" id="qAm-ii-144"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="C16" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VYm-hM-SJr">
+                                <rect key="frame" x="179" y="252" width="40" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="qGC-xB-u4N"/>
+                                    <constraint firstAttribute="width" constant="40" id="rB6-6N-CQF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NdQ-a9-9KA">
+                                <rect key="frame" x="199" y="8" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="203-Bu-J6E"/>
+                                    <constraint firstAttribute="height" constant="20" id="iPy-us-Awc"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="img-uncheck-image"/>
+                                <connections>
+                                    <action selector="checkSelected:" destination="gTV-IL-0wX" eventType="touchUpInside" id="EVD-aB-LFI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="jds-z1-8fg" secondAttribute="trailing" id="29l-co-P9a"/>
                             <constraint firstAttribute="bottom" secondItem="jds-z1-8fg" secondAttribute="bottom" id="7dL-hE-X2k"/>
+                            <constraint firstAttribute="trailing" secondItem="1wm-RM-xvk" secondAttribute="trailing" id="IC0-RV-vri"/>
+                            <constraint firstAttribute="trailing" secondItem="VYm-hM-SJr" secondAttribute="trailing" constant="8" id="P7f-11-aEV"/>
+                            <constraint firstItem="NdQ-a9-9KA" firstAttribute="top" secondItem="kJF-Ps-nRT" secondAttribute="top" constant="8" id="PjQ-sa-QIB"/>
+                            <constraint firstItem="VYm-hM-SJr" firstAttribute="top" secondItem="1wm-RM-xvk" secondAttribute="bottom" constant="8" id="Ybj-Or-mAs"/>
+                            <constraint firstItem="jds-z1-8fg" firstAttribute="top" secondItem="VYm-hM-SJr" secondAttribute="bottom" constant="8" id="b8S-7g-uok"/>
+                            <constraint firstAttribute="trailing" secondItem="NdQ-a9-9KA" secondAttribute="trailing" constant="8" id="dRG-f8-2hq"/>
                             <constraint firstItem="9lF-Ya-lTb" firstAttribute="leading" secondItem="kJF-Ps-nRT" secondAttribute="leading" id="eIR-lY-ujt"/>
                             <constraint firstItem="jds-z1-8fg" firstAttribute="top" secondItem="9lF-Ya-lTb" secondAttribute="bottom" id="fWq-MH-Axp"/>
                             <constraint firstAttribute="trailing" secondItem="9lF-Ya-lTb" secondAttribute="trailing" id="nUG-Qt-hAW"/>
@@ -53,16 +109,22 @@
                 <constraint firstItem="kJF-Ps-nRT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="RgS-MO-GXm"/>
                 <constraint firstAttribute="trailing" secondItem="kJF-Ps-nRT" secondAttribute="trailing" id="c9x-51-D2d"/>
             </constraints>
-            <size key="customSize" width="249" height="335"/>
+            <size key="customSize" width="227" height="335"/>
             <connections>
+                <outlet property="contentEvaluate" destination="TgN-Da-XV4" id="5A6-q5-QhP"/>
                 <outlet property="contentImageView" destination="9lF-Ya-lTb" id="Sdn-IM-S6H"/>
+                <outlet property="contentLimitAge" destination="VYm-hM-SJr" id="zlc-WG-dBJ"/>
                 <outlet property="contentNameLb" destination="jds-z1-8fg" id="vfH-4j-MoR"/>
+                <outlet property="limitAgeLabel" destination="VYm-hM-SJr" id="98m-Nn-tcr"/>
+                <outlet property="radioButton" destination="NdQ-a9-9KA" id="0Dd-jk-hUf"/>
             </connections>
-            <point key="canvasLocation" x="127.48091603053435" y="47.535211267605639"/>
+            <point key="canvasLocation" x="110.68702290076335" y="47.535211267605639"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="blackpanther" width="382" height="566"/>
+        <image name="img-uncheck-image" width="25" height="25"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
